fix z-index of header message to be above everything else

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -54,6 +54,7 @@ $placeholder:	rgb(80, 80, 80);
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 50;
 }
 
 #movie-container {
